# Learn_OpenGL

./: CMakeLists.txt  README.md  main.cpp  run.sh  stuff.h
Libs/: CMakeLists.txt
Libs/glad/: glad.c  glad.h
Others/Notes/: DeepThoughts.md  Graphics_pipeline_basics.md
Others/true/: main.cpp
temp/: main2.cpp  notes.md
